# crewaient-001

./: README.md  pyproject.toml
src/crewaient_001/: main.py
src/trending_technology_market_news_in_html_format/config/: agents.yaml  tasks.yaml
