[project]
name = "crewaient-001"
version = "0.1.0"
description = "crewaient-001 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<=3.13"
dependencies = [
    "crewai[tools]>=0.86.0,<1.0.0"
]

[project.scripts]
crewaient-001 = "crewaient-001.main:run"
run_crew = "crewaient-001.main:run"
train = "crewaient-001.main:train"
replay = "crewaient-001.main:replay"
test = "crewaient-001.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
